# image-converter

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  LICENSE-MIT  README.md
image-converter-react/: README.md  config-overrides.js  package-lock.json  package.json  tsconfig.json
image-converter-react/public/: index.html  manifest.json
image-converter-react/src/: App.css  App.tsx  ConvertedFile.tsx  Download.tsx  DownloadAllButton.tsx  DroppedFile.tsx  Dropzone.tsx  EndToEnd.test.js  FileDropzone.tsx  FormatPicker.tsx  Header.tsx  ImageList.tsx  ImageListItem.tsx  ImageState.tsx  LicenseAndPrivacy.tsx  convert.js  extensionFromFormat.ts  index.tsx
image-converter-rust/: Cargo.toml
image-converter-rust/src/: lib.rs
