[package]
name = "image-converter-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# See feature flags: https://docs.rs/crate/image/0.24.5/features
[dependencies]
image = {version = "0.24.4", default-features = false, features = [
    # WASM size is very dependent on the number of formats enabled.
    "gif", 
    "jpeg",  
    "png", 
    "bmp",
    "ico",
    "pnm", 
    "tga", 
    "tiff", 
    "webp", 
    "hdr", 
    "dxt", 
    "dds", 
    "farbfeld", 
    "jpeg_rayon",
    "openexr",
    # requires none rust libraries
    # "avif-encoder",
    # "avif-decoder",
    # "webp-encoder",
]}
js-sys = "0.3.60"
rstest = "0.15.0"
wasm-bindgen = "0.2.83"
wasm-bindgen-test = "0.3.33"
wee_alloc = "0.4.5"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = "z"
